--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "stm32f10x.h": "c"
+        "stm32f10x.h": "c",
+        "stm32f10x_spi.h": "c",
+        "string": "c",
+        "xstring": "c",
+        "xutility": "c"
     }
 }
